# merkle_tree_demo

./: Cargo.toml  README.md
src/: circuit.rs  main.rs  params.rs  utils.rs  witness.rs
src/merkle_tree/: mod.rs  parallel_smt.rs  rescue_hasher.rs  sequential_smt.rs
